--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "jszip": "^3.10.1",
     "monaco-editor": "^0.52.2",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "prettier": "^3.3.3"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
