--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "monaco-editor": "^0.52.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "prettier": "^3.3.3"
+    "prettier": "^3.3.3",
+    "sass": "^1.79.4",
+    "less": "^4.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
